<resources>
    <string name="app_name">Cupcake</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logo_description">Application Logo</string>
    <string name="login_title">Login</string>
    <string name="hostname_hint">Hostname</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error">Login failed. Please check your credentials.</string>
    <string name="login_success">Login successful!</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="hostname_required">Hostname is required</string>
    <string name="logout_button">Logout</string>
    <string name="menu_main">Main menu</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="settings_title">Settings</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="dark_mode_follow_system">Follow System</string>
    <string name="dark_mode_light">Light</string>
    <string name="dark_mode_dark">Dark</string>
    <string name="category_icon">Category icon\n</string>
    <string name="profile_management">Profile Management</string>
    <string name="active_profile_indicator">Activated profile</string>
    <string name="storage">Storage</string>
    <string name="storage_object_icon">Storage object icon</string>
    <string name="breadcrumb_path_delimiter"><![CDATA[>]]></string>
    <string name="view_reagents">View Reagents (%1$d)</string>
    <string name="no_items_found">No items found</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="no_reagents_found">No reagents found</string>
    <string name="could_not_generate_barcode_with_this_format">Could not generate barcode with this format</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="reagent_image">Reagent image</string>
    <string name="current_quantity">Current Quantity</string>
    <string name="initial_quantity">Initial Quantity</string>
    <string name="location">Location</string>
    <string name="owner">Owner</string>
    <string name="last_updated">Last Updated</string>
    <string name="description">Description</string>
    <string name="expires">Expires</string>
    <string name="recent_messages">Recent Messages</string>
    <string name="view_all">View All</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="messages">Messages</string>
    <string name="error_loading_messages">Error loading messages</string>
    <string name="retry">Retry</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message...</string>
    <string name="bold_text">Bold text</string>
    <string name="italic_text">Italic text</string>
    <string name="underline_text">Underline text</string>
    <string name="create_new_message">Create new message</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="edit_reagent">Edit Reagent</string>
    <string name="add">Add</string>
    <string name="reserve">Reserve</string>
    <string name="shareable_status">Shareable status</string>
    <string name="shareable">Shareable</string>
    <string name="please_log_in">Please log in</string>
    <string name="instrument_image_description">Instrument image</string>
    <string name="tab_vendor_contacts">Vendor</string>
    <string name="tab_manufacturer_contacts">Manufacturer</string>
    <string name="dialog_title_remove_contact">Remove Contact</string>
    <string name="dialog_message_remove_contact_confirmation">Are you sure you want to remove this contact?</string>
    <string name="action_remove">Remove</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_contact_name_empty">Error empty contact name</string>
    <string name="title_edit_contact">Edit contact</string>
    <string name="title_add_contact">Add contact</string>
    <string name="button_remove_description">Delete contact</string>
    <string name="button_edit_description">Edit contact</string>
    <string name="button_copy_description">Copy contact details</string>
    <string name="search_reagents">Search Reagents</string>
    <string name="enter_reagent_name_or_id">Enter reagent name or ID</string>
    <string name="time_keepers">Time Keepers</string>
    <string name="instruments">Instruments</string>
    <string name="protocols">Protocols</string>
    <string name="lab_groups">Lab Groups</string>
    <string name="edit_session">Edit session</string>
    <string name="delete_session">Delete session</string>
    <string name="session_status">Session status</string>
    <string name="protocol_title">Protocol Title</string>
    <string name="protocol_description">Protocol Description</string>
    <string name="viewers">Viewers</string>
    <string name="editors">Editors</string>
    <string name="search_for_users">Search for users</string>
    <string name="new_tag">New tag</string>
    <string name="current_tags">Current Tags</string>
    <string name="remove_user">Remove user</string>
    <string name="add_user">Add user</string>
    <string name="search_existing_tags">Search existing tags</string>
    <string name="expand_or_collapse_section">Expand or collapse section</string>
    <string name="required_reagents">Required Reagents</string>
    <string name="start_session">Start session</string>
    <string name="session_activity_title_placeholder">Session activity</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="reagent_name">Reagent Name</string>
    <string name="required_0_units">Required: 0 units</string>
    <string name="current_bookings">Current Bookings:</string>
    <string name="reserve_book_reagent">Reserve/Book Reagent</string>
    <string name="expand_booking_details">Expand booking details</string>
    <string name="required_quantity_header">Required</string>
    <string name="unit_header">Unit</string>
    <string name="loading_details">Loading details</string>
    <string name="reagent_image_description">Reagent Image</string>
    <string name="quantity_label">Quantity:</string>
    <string name="storage_label">Location:</string>
    <string name="barcode_label">Barcode:</string>
    <string name="expiration_date_label">Expires:</string>
    <string name="expand_reagents_section">Expand reagents section</string>
    <string name="reagents_for_step_header">Reagents</string>
    <string name="add_annotation">Add annotation to step</string>
    <string name="annotations">Comment annotations</string>
    <string name="no_annotations_available">No annotations available</string>
    <string name="create_annotation">Create annotation</string>
    <string name="text">Text</string>
    <string name="file">File</string>
    <string name="audio">Voice</string>
    <string name="video">Video</string>
    <string name="enter_text">Enter text</string>
    <string name="select_file">Select file</string>
    <string name="record_audio">Record voice note</string>
    <string name="record_video">Record video note</string>
    <string name="notes">File note</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="annotation_image">Annotation image</string>
    <string name="media_player_position_text">Postion: %1$s</string>
    <string name="media_player_progress_text">%1$s / %2$s</string>
    <string-array name="mcalculator_form_types">
        <item>dynamic</item>
        <item>massFromVolumeAndConcentration</item>
        <item>volumeFromMassAndConcentration</item>
        <item>concentrationFromMassAndVolume</item>
        <item>volumeFromStockVolumeAndConcentration</item>
    </string-array>
    <string-array name="mcalculator_concentration_units">
        <item>uM</item>
        <item>mM</item>
        <item>M</item>
    </string-array>
    <string-array name="mcalculator_volume_units">
        <item>mL</item>
        <item>L</item>
    </string-array>
    <string-array name="mcalculator_weight_units">
        <item>mg</item>
        <item>g</item>
    </string-array>
    <string-array name="reagent_units">
        <item>g</item>
        <item>mg</item>
        <item>μg</item>
        <item>L</item>
        <item>mL</item>
        <item>μL</item>
        <item>M</item>
        <item>mM</item>
        <item>μM</item>
        <item>nM</item>
        <item>ea</item>
        <item>pieces</item>
        <item>other</item>
    </string-array>
</resources>