<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_instruments"
        android:icon="@drawable/ic_instrument"
        android:title="@string/instruments" />
    <item
        android:id="@+id/nav_storage"
        android:title="@string/storage"
        android:icon="@drawable/ic_storage_black_24dp"/>
    <item
        android:id="@+id/nav_messages"
        android:title="@string/messages"
        android:icon="@drawable/ic_message_black_24dp" />
    <item
        android:id="@+id/nav_timekeepers"
        android:icon="@drawable/outline_calendar_clock_24"
        android:title="@string/time_keepers" />
    <item
        android:id="@+id/nav_protocols"
        android:icon="@drawable/ic_session"
        android:title="@string/protocols" />
    <item
        android:id="@+id/nav_metadata"
        android:icon="@drawable/outline_feature_search_24"
        android:title="Metadata Search" />
</menu>