<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_reagent"
        android:title="@string/edit_reagent"
        android:icon="@drawable/ic_outline_edit_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_photo"
        android:title="@string/edit_photo"
        android:icon="@drawable/ic_outline_camera_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_reagent"
        android:title="@string/add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reserve_reagent"
        android:title="@string/reserve"
        app:showAsAction="never" />
</menu>